# berlin-insolvency-radar

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  QWEN.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.qwen/: settings.json  settings.json.orig
.qwen/skills/agentic-pipeline-architecture-constraints/: SKILL.md
.qwen/skills/langgraph-agentic-pipeline-implementation/: SKILL.md
.qwen/skills/mcp-python-skeleton/: SKILL.md
.qwen/skills/safe-live-e2e-testing/: SKILL.md
.qwen/skills/traceable-implementation-planning/: SKILL.md
config/: scoring.yaml  sources.yaml
docs/: CONVENTIONS.md  HANDOFF-TO-CODING-AGENT.md  README.md  STRATEGY.md  berlin-insolvency-radar-analysis.md  code-quality-review.md  extraction-compliance-eval-set-2026-06-19.md  full-project-review-2026-06-19.md  implementation-backlog-2026-06-19.md  issue-parsing.md  live-validation-2026-06-19.md  open-source-readiness-plan.md  operational-upgrade-delivery-2026-06-19.md  operationalization-plan-2026-06-19.md  parser-model-enrichment-direction-2026-06-19.md  phase-0-plan-traceability.md  phase-0-review.md  phase-1-review.md  phase-2-code-review-findings.md  phase-2-implementation-plan.md  phase-2-remaining-fixes-plan.md  phase-2-verification-checklist.md  pipeline-optimization-analysis.md  pipeline-optimization-plan.md  production-validation-checklist-2026-06-16.md  project-completion-findings.md  repo-state-assessment-2026-06-16.md  unternehmensregister-integration-findings-2026-06-19.md
docs/plans/: enrichment-integration.md
docs/research/: business-model.md  data-sources.md  legal.md  market.md  source-expansion-2026-06-19.md
docs/strategy/: agentic-implementation-plan.md  application-architecture.md  data-source-strategy.md  execution-plan.md  mcp-interface.md  newsletter-template.md  phase-0-implementation-plan.md  phase-1-implementation-plan.md  phase-acceptance-tests.md  scoring-model.md  testing-and-coding-standards.md
documentation/: README.md  architecture.md  configuration.md  data-sources.md  getting-started.md  how-it-works.md  legal-and-compliance.md  mcp-api.md  product-overview.md  scoring-model.md  security-model.md  testing-standards.md
scripts/: import-legacy-scout.py
src/biradar/: __init__.py
src/biradar/agents/: __init__.py  extraction.py  llm.py  risk_review.py
src/biradar/agents/prompts/: __init__.py  extraction.yaml  risk_review.yaml
src/biradar/cli/: main.py
src/biradar/config/: __init__.py  settings.py
src/biradar/domain/: __init__.py  compliance.py  dedupe.py  scoring.py  statuses.py  validation.py
src/biradar/graph/: checkpoints.py  health_workflow.py  phase0_workflow.py  phase2_workflow.py  pipeline_workflow.py  review_workflow.py  state.py
src/biradar/mcp/: __init__.py  envelope.py  schemas.py  server.py
src/biradar/observability/: __init__.py  logging.py
src/biradar/output/: __init__.py  export.py
src/biradar/services/: __init__.py  candidates.py  container.py  health.py  import_legacy.py  issues.py  phase2_pipeline.py  pipeline.py  reviews.py
src/biradar/sources/: __init__.py  enrichment.py  official_portal.py
src/biradar/sources/enrichment/: __init__.py  bundesanzeiger.py  github.py  handelsregister.py  models.py  north_data.py  orchestrator.py  registry.py  runtime.py  unternehmensregister.py  website.py  wikidata.py
src/biradar/storage/: __init__.py  db.py  repository.py
src/biradar/utils/: __init__.py  prompts.py
tests/: conftest.py
tests/acceptance/: test_foundation.py  test_phase0_foundation.py  test_phase1_legacy_import_review.py
tests/e2e/: test_live_pipeline.py  test_mcp_workflow.py  test_phase1_mcp_workflow.py  test_phase2_live_e2e.py  test_phase2_mcp_workflow.py  test_phase2_pipeline.py  test_pipeline.py
tests/fixtures/evals/: extraction_compliance_cases.json
tests/fixtures/official_portal/: sample_response.html
tests/fixtures/phase1/: build_legacy_fixture.py  fixture_rows.json
tests/unit/: test_agents.py  test_compliance.py  test_dedupe.py  test_enrichment.py  test_extraction_eval.py  test_llm.py  test_mcp_server.py  test_official_portal.py  test_phase2_workflow.py  test_pipeline_workflow.py  test_scoring.py  test_statuses.py
