[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biradar"
version = "0.1.0"
description = "Berlin Insolvency Opportunity Radar - MCP-first intelligence service"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
biradar = "biradar.cli.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "RUF"]
ignore = [
    "E501", # Ruff will handle line length via line-length setting
    "B905", # zip() without strict= is fine for internal duckdb rows
    "RUF005", # iterable concatenation is fine here
    "UP046", # Generic[T] subclass is standard pydantic pattern
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/biradar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/biradar --cov-report=term-missing -v"
