[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biradar"
version = "0.1.0"
description = "Berlin Insolvency Opportunity Radar - MCP-first intelligence service"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
biradar = "biradar.cli.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-rerunfailures>=14.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "RUF", "S", "SIM", "T20", "PT", "ARG", "BLE", "RET", "C4", "PIE"]
ignore = [
    "E501", # Ruff will handle line length via line-length setting
    "B905", # zip() without strict= is fine for internal duckdb rows
    "RUF005", # iterable concatenation is fine here
    "UP046", # Generic[T] subclass is standard pydantic pattern
    "S101", # assert is fine in tests
    "S104", # binding to all interfaces is fine in local dev
    "S301", # pickle is not used
    "S314", # XML from official government portal, not user-controlled
    "S608", # repository uses parameterized ? placeholders; false positives on IN clauses
    "PT011", # pytest.raises without match= is fine
    "PT018", # assertions in fixtures are deliberate
    "ARG001", # unused function arguments in LangGraph nodes are intentional
    "ARG002", # unused method arguments in service/repository signatures are by design
    "BLE001", # blind except in CLI catch-all is intentional
    "RET504", # unnecessary assignment before return is fine for readability
    "C401", # set comprehension is fine
]

[tool.ruff.lint.per-file-ignores]
"src/biradar/cli/**/*.py" = ["T201"]  # CLI uses print() for output
"tests/fixtures/**/*.py" = ["T201"]   # Fixture build scripts use print()
"scripts/**/*.py" = ["T201"]          # Utility scripts use print()
"tests/**/*.py" = ["S101", "S608"]    # assert in tests; table names in test queries

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/biradar"]

# Third-party library type stub limitations produce false positives.
# LangChain's ChatOpenAI params, structured_output returns, and response.content
# types; BeautifulSoup's _AttributeValue; DuckDB's fetchone() return; and
# LangGraph's RunnableConfig are all inadequately typed in upstream stubs.
reportCallIssue = false
reportAttributeAccessIssue = false
reportReturnType = false
reportArgumentType = false
reportOptionalSubscript = false

[tool.coverage.run]
source = ["src/biradar"]
relative_files = true

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/biradar --cov-report=term-missing -v --timeout=60"
markers = [
    "live: marks tests that make live network requests and real API calls (deselect with '-m \"not live\"')",
    "slow: marks tests that take longer than 10 seconds",
]
